# formulathics

./: .gitignore  Cargo.toml  README.md
iOS/iOS/: ContentView.swift  Model.swift  iOSApp.swift
iOS/iOS.xcodeproj/: project.pbxproj
shared/: Cargo.toml
shared/src/: app.rs  gpt.rs  lib.rs
shared/src/capabilities/: sse.rs
shared_types/: Cargo.toml  build.rs
