[package]
name = "shared_types"
version = "0.1.0"
authors.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
rust-version.workspace = true

[dependencies]

[build-dependencies]
anyhow.workspace = true
crux_core = { version = "0.3", features = [
    "typegen"
] }
crux_http = { version = "0.2.0" }
crux_kv = { version = "0.1" }
crux_platform = { version = "0.1" }
crux_time = { version = "0.1" }
shared = { path = "../shared" }